--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             background-color: #f8f9fa;
             font-family: 'Poppins', sans-serif;
             padding: 10px;
             position: relative;
+            padding-bottom: 50px;
         }
         .container {
             background: white;
@@ -69,7 +70,7 @@
             color: #555;
         }
 
-        /* ✅ Ad Banner Styling */
+        /* Ad Banner Styling */
         .ad-banner {
             width: 100%;
             max-width: 320px;
@@ -82,7 +83,7 @@
             z-index: 3;
         }
 
-        /* ✅ Negative Banner Ad */
+        /* Negative Banner Ad */
         .negative-banner {
             position: fixed;
             bottom: 70px;
@@ -91,7 +92,7 @@
             width: 100%;
             max-width: 320px;
             height: 50px;
-            background: transparent; /* ✅ Fix: Background removed */
+            background: transparent;
             display: none;
             justify-content: center;
             align-items: center;
@@ -101,7 +102,18 @@
             display: flex !important;
         }
 
-        /* ✅ Responsive Fixes */
+        /* Social Bar Ad Container */
+        .social-bar-ad {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 50px;
+            background: #fff;
+            z-index: 9999;
+        }
+
+        /* Responsive Fixes */
         @media (max-width: 480px) {
             .container {
                 width: 100%;
@@ -123,7 +135,7 @@
 </head>
 <body>
 
-    <!-- ✅ Top Banner Ad -->
+    <!-- Top Banner Ad -->
     <div class="ad-banner" id="topBanner">
         <script type="text/javascript">
             atOptions = {
@@ -158,7 +170,7 @@
         <button class="verify-btn" id="verify">Verify Now</button>
     </div>
 
-    <!-- ✅ Bottom Banner Ad -->
+    <!-- Bottom Banner Ad -->
     <div class="ad-banner" id="bottomBanner">
         <script type="text/javascript">
             atOptions = {
@@ -172,14 +184,22 @@
         <script type="text/javascript" src="//www.highperformanceformat.com/73b364c24a261f9683d274119a5fcce3/invoke.js"></script>
     </div>
 
-    <!-- ✅ Negative Banner Ad -->
+    <!-- Negative Banner Ad -->
     <div class="negative-banner" id="negativeBanner">
         <script async="async" data-cfasync="false" src="//pl26193382.effectiveratecpm.com/26ecddc752fd888da4d100d6224dee31/invoke.js"></script>
         <div id="container-26ecddc752fd888da4d100d6224dee31"></div>
     </div>
 
+    <!-- Adsterra Social Bar Ad -->
+    <div class="social-bar-ad">
+        <script type='text/javascript' src='//pl26218208.effectiveratecpm.com/e5/3c/1c/e53c1c6d9ec933ec08c0ff6b02a08979.js'></script>
+    </div>
+
+    <!-- Popunder Ad Script -->
+    <script type='text/javascript' src='//pl26191837.effectiveratecpm.com/45/a8/f3/45a8f357ab4ac02d5166a89f566de665.js'></script>
+
     <script>
-        // ✅ Submit Button Click Event
+        // Submit Button Click Event
         document.getElementById("submit").addEventListener("click", function() {
             let instaID = document.getElementById("instaID").value;
             let followers = document.getElementById("followers").value;
@@ -206,12 +226,12 @@
             }, 1000);
         });
 
-        // ✅ Verify Button Click Event
+        // Verify Button Click Event
         document.getElementById("verify").addEventListener("click", function() {
             window.location.href = "https://www.effectiveratecpm.com/hx4b6561a?key=656aee24f35099da096c88a82b61500c";
         });
 
-        // ✅ Show Negative Banner Every 10 sec
+        // Show Negative Banner Every 10 sec
         function showNegativeBanner() {
             document.getElementById("negativeBanner").classList.add("show-ad");
             setTimeout(() => {
@@ -219,12 +239,11 @@
             }, 5000);
         }
 
-        // ✅ Start Showing Ads After 10 sec
+        // Start Showing Ads After 10 sec
         setTimeout(() => {
             showNegativeBanner();
             setInterval(showNegativeBanner, 10000);
         }, 10000);
     </script>
-
 </body>
 </html>
