--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- ======================================= -->
 
     <div class="follower-form-card">
-        <h2 class="form-title">Boost Your Instagram Presence</h2>
+        <h2 class="form-title">FREE INSTAGRAM FOLLOWERS</h2>
         <!-- ===== NATIVE BANNER AD SLOT (Hidden on Mobile by CSS) ===== -->
         <div class="ad-container" id="ad-slot-native-banner">
             <div id="container-26ecddc752fd888da4d100d6224dee31"></div>
