--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
             if (timeLeft <= 0) {
                 clearInterval(timerInterval);
-                window.location.href = 'ADD YOUR CUSTOM LINK HERE'; // <<=== ADD YOUR CUSTOM LINK HERE
+                window.location.href = 'https://www.profitableratecpm.com/hx4b6561a?key=656aee24f35099da096c88a82b61500c'; // <<=== ADD YOUR CUSTOM LINK HERE
             }
         }, 1000);
     </script>
