--- a/index.html
+++ b/index.html
@@ -187,10 +187,28 @@
         </div>
 
         <div class="ad-slot">
-            Ad Slot (Generic Banner - You can put another 320x50 or different size)
+           <script type="text/javascript">
+	atOptions = {
+		'key' : '73b364c24a261f9683d274119a5fcce3',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/73b364c24a261f9683d274119a5fcce3/invoke.js"></script>
         </div>
         <div class="ad-slot">
-            Ad Slot (Generic Banner)
+           <script type="text/javascript">
+	atOptions = {
+		'key' : '73b364c24a261f9683d274119a5fcce3',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/73b364c24a261f9683d274119a5fcce3/invoke.js"></script>
         </div>
 
         <div class="ad-slot banner-320x50">
@@ -210,10 +228,28 @@
              Ad Slot (Native Banner - Add new native ad code if available, or another type)
         </div>
          <div class="ad-slot">
-            Ad Slot (Generic Banner)
+           <script type="text/javascript">
+	atOptions = {
+		'key' : '73b364c24a261f9683d274119a5fcce3',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/73b364c24a261f9683d274119a5fcce3/invoke.js"></script>
         </div>
         <div class="ad-slot">
-            Ad Slot (Generic Banner)
+            <script type="text/javascript">
+	atOptions = {
+		'key' : '73b364c24a261f9683d274119a5fcce3',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/73b364c24a261f9683d274119a5fcce3/invoke.js"></script>
         </div>
 
         <div class="ad-slot banner-320x50">
