--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
         </div>
 
         <div class="ad-slot native-banner">
-             Ad Slot (Native Banner - Add new native ad code if available, or another type)
+             <script async="async" data-cfasync="false" src="//pl26193382.profitableratecpm.com/26ecddc752fd888da4d100d6224dee31/invoke.js"></script>
+<div id="container-26ecddc752fd888da4d100d6224dee31"></div>
         </div>
          <div class="ad-slot">
            <script type="text/javascript">
@@ -266,13 +267,32 @@
         </div>
 
         <div class="ad-slot native-banner">
-            Ad Slot (Native Banner - Add new native ad code if available, or another type)
+            <script async="async" data-cfasync="false" src="//pl26193382.profitableratecpm.com/26ecddc752fd888da4d100d6224dee31/invoke.js"></script>
+<div id="container-26ecddc752fd888da4d100d6224dee31"></div>
         </div>
          <div class="ad-slot">
-            Ad Slot (Generic Banner)
+            <script type="text/javascript">
+	atOptions = {
+		'key' : '73b364c24a261f9683d274119a5fcce3',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/73b364c24a261f9683d274119a5fcce3/invoke.js"></script>
         </div>
         <div class="ad-slot">
-            Ad Slot (Generic Banner)
+            <script type="text/javascript">
+	atOptions = {
+		'key' : '73b364c24a261f9683d274119a5fcce3',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/73b364c24a261f9683d274119a5fcce3/invoke.js"></script>
         </div>
     </div>
 
