--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <h2>Please Wait!</h2>
             <p>Your free reward is almost ready.</p>
             <span id="countdown-timer-display">10</span>
-            <p class="reward-text">Wait <span id="seconds-left-display">10</span> sec to get FREE ?1150</p>
+            <p class="reward-text">Wait <span id="seconds-left-display">10</span> sec to get FREE 1150₹</p>
         </div>
     </div>
 
