--- a/index.html
+++ b/index.html
@@ -132,8 +132,16 @@
 </head>
 <body>
     <div class="ad-banner" id="topBanner">
-        <script type="text/javascript"> atOptions = { 'key' : '73b364c24a261f9683d274119a5fcce3', 'format' : 'iframe', 'height' : 50, 'width' : 320, 'params' : {} }; </script>
-        <script type="text/javascript" src="//www.highperformanceformat.com/73b364c24a261f9683d274119a5fcce3/invoke.js"></script>
+       <script type="text/javascript">
+	atOptions = {
+		'key' : '9d4fb5066bbe1756ce1f3021ba653ee6',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/9d4fb5066bbe1756ce1f3021ba653ee6/invoke.js"></script>
     </div>
 
     <div class="container">
@@ -157,8 +165,16 @@
     </div>
 
     <div class="ad-banner" id="bottomBanner">
-        <script type="text/javascript"> atOptions = { 'key' : '73b364c24a261f9683d274119a5fcce3', 'format' : 'iframe', 'height' : 50, 'width' : 320, 'params' : {} }; </script>
-        <script type="text/javascript" src="//www.highperformanceformat.com/73b364c24a261f9683d274119a5fcce3/invoke.js"></script>
+        <script type="text/javascript">
+	atOptions = {
+		'key' : '9d4fb5066bbe1756ce1f3021ba653ee6',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/9d4fb5066bbe1756ce1f3021ba653ee6/invoke.js"></script>
     </div>
 
     <div class="negative-banner" id="negativeBanner"></div>
@@ -261,7 +277,7 @@
                     timerDisplay.innerText = `Redirecting...`;
                 } else {
                     clearInterval(countdownInterval);
-                    const redirectUrl = "https://www.effectiveratecpm.com/hx4b6561a?key=656aee24f35099da096c88a82b61500c";
+                    const redirectUrl = "https://www.profitableratecpm.com/qwcp2ygx0?key=a97c615b171aea06ca3b41c039a7ed9d";
                     console.log("Redirecting to:", redirectUrl);
                     window.location.href = redirectUrl;
                 }
