--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@
 </head>
 <body>
     <div class="ad-banner" id="topBanner">
-       <script type="text/javascript">
-	atOptions = {
-		'key' : '9d4fb5066bbe1756ce1f3021ba653ee6',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/9d4fb5066bbe1756ce1f3021ba653ee6/invoke.js"></script>
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '9d4fb5066bbe1756ce1f3021ba653ee6',
+                'format' : 'iframe',
+                'height' : 50,
+                'width' : 320,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/9d4fb5066bbe1756ce1f3021ba653ee6/invoke.js"></script>
     </div>
 
     <div class="container">
@@ -166,15 +166,15 @@
 
     <div class="ad-banner" id="bottomBanner">
         <script type="text/javascript">
-	atOptions = {
-		'key' : '9d4fb5066bbe1756ce1f3021ba653ee6',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/9d4fb5066bbe1756ce1f3021ba653ee6/invoke.js"></script>
+            atOptions = {
+                'key' : '9d4fb5066bbe1756ce1f3021ba653ee6',
+                'format' : 'iframe',
+                'height' : 50,
+                'width' : 320,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/9d4fb5066bbe1756ce1f3021ba653ee6/invoke.js"></script>
     </div>
 
     <div class="negative-banner" id="negativeBanner"></div>
@@ -196,7 +196,6 @@
         try {
             firebase.initializeApp(firebaseConfig);
             database = firebase.database();
-            console.log("Firebase initialized successfully");
         } catch (error) {
             console.error("Firebase initialization failed:", error);
         }
@@ -210,40 +209,19 @@
         let negativeBannerInterval = null;
         let hideNegativeBannerTimeout = null;
 
-        console.log("Submit button:", submitBtn);
-        console.log("Instagram ID input:", instaIDInput);
-        console.log("Followers select:", followersSelect);
-        console.log("Timer display:", timerDisplay);
-
         if (submitBtn) {
             submitBtn.addEventListener("click", function() {
-                console.log("Submit button clicked");
-
                 const instaID = instaIDInput.value.trim();
                 const followers = followersSelect.value;
-
-                console.log("Instagram ID:", instaID);
-                console.log("Followers selected:", followers);
-
                 if (instaID === "" || followers === "") {
-                    console.log("Validation failed: Fields are empty");
                     alert("Please fill all fields");
                     return;
                 }
-
                 const submissionDate = new Date().toLocaleString();
-                const submission = {
-                    instaId: instaID,
-                    followers: followers,
-                    date: submissionDate
-                };
-
-                console.log("Submission data:", submission);
-
+                const submission = { instaId: instaID, followers: followers, date: submissionDate };
                 if (database) {
                     database.ref('submissions').push(submission)
                         .then(() => {
-                            console.log("Data saved to Firebase successfully");
                             startCountdown();
                         })
                         .catch(error => {
@@ -251,26 +229,19 @@
                             alert("Error submitting data. Please try again.");
                         });
                 } else {
-                    console.error("Firebase database not initialized. Proceeding with countdown.");
                     startCountdown();
                 }
             });
-        } else {
-            console.error("Submit button not found in the DOM");
         }
 
         function startCountdown() {
-            console.log("Starting countdown");
             submitBtn.style.display = "none";
             timerDisplay.classList.remove("hidden");
             let count = 10;
             timerDisplay.innerText = `Processing... Wait ${count} seconds`;
-
             if (countdownInterval) clearInterval(countdownInterval);
-
             countdownInterval = setInterval(() => {
                 count--;
-                console.log("Countdown:", count);
                 if (count > 0) {
                     timerDisplay.innerText = `Processing... Wait ${count} seconds`;
                 } else if (count === 0) {
@@ -278,7 +249,6 @@
                 } else {
                     clearInterval(countdownInterval);
                     const redirectUrl = "https://www.profitableratecpm.com/qwcp2ygx0?key=a97c615b171aea06ca3b41c039a7ed9d";
-                    console.log("Redirecting to:", redirectUrl);
                     window.location.href = redirectUrl;
                 }
             }, 1000);
@@ -288,8 +258,8 @@
             if (negativeBannerDiv) {
                 if (hideNegativeBannerTimeout) clearTimeout(hideNegativeBannerTimeout);
                 negativeBannerDiv.innerHTML = `
-                    <script async="async" data-cfasync="false" src="//pl26193382.profitableratecpm.com/26ecddc752fd888da4d100d6224dee31/invoke.js"><\/script>
-                    <div id="container-26ecddc752fd888da4d100d6224dee31"></div>
+                    <script async="async" data-cfasync="false" src="//pl27502557.profitableratecpm.com/4652a18d631752e13cd4d14d88c3a3af/invoke.js"><\/script>
+                    <div id="container-4652a18d631752e13cd4d14d88c3a3af"></div>
                 `;
                 negativeBannerDiv.classList.add("show-ad");
                 hideNegativeBannerTimeout = setTimeout(() => {
@@ -306,7 +276,12 @@
         }, 5000);
     </script>
 
-    <script type='text/javascript' src='//pl26191837.profitableratecpm.com/45/a8/f3/45a8f357ab4ac02d5166a89f566de665.js'></script>
-    <script type='text/javascript' src='//pl26218208.profitableratecpm.com/e5/3c/1c/e53c1c6d9ec933ec08c0ff6b02a08979.js'></script>
+    <!-- Other Ad Scripts -->
+    <!-- === NEW SOCIAL BAR SCRIPT ADDED === -->
+    <script type='text/javascript' src='//pl27502620.profitableratecpm.com/5a/d7/e0/5ad7e08ee66515c28f9e7faf0861239d.js'></script>
+    
+    <!-- New Popunder Script -->
+    <script type='text/javascript' src='//pl27502606.profitableratecpm.com/0b/c1/e6/0bc1e6efce3979b60b743cbc8a7a7261.js'></script>
+    
 </body>
 </html>
